syntax = "proto3";

package service;

option go_package = "accountmanager/internal/gRPC/service";

import "accountmanager/internal/proto-files/domain/account.proto";

// AccountService Definition
service AccountService {
    rpc connect (ConnectionRequest) returns (ConnectionResponse);
    rpc disconnect (DisconnectionRequest) returns (DisconnectionResponse);
}

message ConnectionRequest {
    Provider provider = 1;
    string user_name = 2;
    string password = 3;
}
message ConnectionResponse {
    string provider = 1;
    int32 status = 2;
    string token = 3;
}

message DisconnectionRequest {
    Provider provider = 1;
    string user_name = 2;
    string token = 3;
}
message DisconnectionResponse {
    int32 status = 1;
}